--- a/templates/data.html
+++ b/templates/data.html
@@ -43,7 +43,7 @@
                 </tbody>
             </table>
         {% endfor %}
-        <a href="set_base_model">Back to the start</a>
+        <a href="/">Back to the start</a>
     </div>
 </body>
 
